Added img and readme.md

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <hr>
         <button type="submit" class="btn btn-danger">Get Pizza Price</button>
       </form>
+      <img src="img/pizza.png" alt="Photo of pizza slice">
       <span id="pizza-order">
         <p><b>Your pizza will cost: </b><span class="result"></span></p>
   <p><b>You selected the following pizza toppings: </b></p>
