Added dollar sign to total

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </form>
       <img src="img/pizza.png" alt="Photo of pizza slice">
       <span id="pizza-order">
-        <p><b>Your pizza will cost: </b><span class="result"></span></p>
+        <p><b>Your pizza's estimated cost: </b><span class="result"></span></p>
   <p><b>You selected the following pizza toppings: </b></p>
     </span>
     </div>
